# hh

./: .envrc  .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR.md  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.md  bottleneck_analysis.md  components.md  flake.nix  go.mod  go.sum  interaction_plan.md  main.go  mcp_plan.md  migrate_ratkit.md  multi-sub-agents_plan.md  plan.md  protocol_normalization_plan.md  question_tool.md  refactor_plan.md  refactor_ui.md  tui_architecture.md
.github/workflows/: main.yml
.hh/: config.json  config.local.json  config.toml  config.toml.bak
agent/: agent.go  agent_loop.go  agent_loop_test.go  agent_test.go  agent_title_test.go  agent_update_test.go  approval.go  config.go  context.go  event.go  interaction.go  interaction_test.go  message.go  provider.go  steering_queue.go  tool.go  types.go
agents/: build.md  loader.go  loader_test.go
benches/: tui_baseline.rs  tui_perf_probe.rs
cmd/agent-debugger/: main.go
cmd/agent_loop_debugger/: main.go
cmd/code-diff-debugger/: main.go
cmd/color-debugger/: main.go
cmd/hh-cli/: main.go
cmd/markdown-debugger/: main.go
common/: channel.go
config/: config.go  config_test.go
docs/: code_organization_analysis.md  consolidation_results.md  run_id.md  tui_architecture.md
docs/designs/: agent_loop.md  subagent_and_task.md  tui.md
docs/plans/: 2025-03-25-agent-markdown-definitions.md  2026-03-17-iocraft-migration.md  widget-first-ui-migration.md
hh-agent/: Cargo.toml  README.md
hh-agent/src/: agent.rs  lib.rs  traits.rs  types.rs
hh-coding-agent/: Cargo.toml  README.md
hh-coding-agent/src/: lib.rs  session.rs
hh-coding-agent/src/config/: mod.rs
hh-coding-agent/src/core/: mod.rs  traits.rs
hh-coding-agent/src/core/agent/: mod.rs  runner.rs  subagent_manager.rs
hh-coding-agent/src/core/prompts/: build_system_prompt.md  explorer_system_prompt.md  general_system_prompt.md  plan_system_prompt.md
hh-coding-agent/src/permission/: rules.rs
hh-coding-agent/src/tool/: bash.rs  mod.rs  registry.rs  schema.rs  skill.rs  task.rs  todo.rs  web.rs
hh-widgets/: Cargo.toml  README.md
hh-widgets/benches/: codediff_perf_probe.rs  scrollable_perf_probe.rs
hh-widgets/examples/: codediff_example.rs
hh-widgets/src/: codediff.rs  lib.rs  markdown.rs  popup.rs  scrollable.rs  theme.rs  widget.rs
hh-widgets/tests/: composed_layouts.rs  no_hh_dependency.rs
provider/: mock_server.go  model_router.go  model_router_test.go  openai.go  openai_message_test.go  openai_test.go
skills/: catalog.go  catalog_test.go
src/: lib.rs  main.rs
src/agent/: color.rs  config.rs  events.rs  loader.rs  loop.rs  mod.rs  registry.rs  state.rs
src/app/: chat_state.rs  core.rs  events.rs  input.rs  mod.rs  render.rs  state.rs  terminal.rs  utils.rs
src/app/components/: commands.rs  input.rs  (+9 more)
src/cli/: agent_init.rs  chat.rs  commands.rs  mod.rs  render.rs  replay.rs
src/config/: loader.rs  mod.rs  settings.rs
src/core/: build_system_prompt.md  mod.rs  plan_system_prompt.md  system_prompt.md  system_prompt.rs  traits.rs  types.rs
src/permission/: matcher.rs  mod.rs  policy.rs
src/provider/: mod.rs  openai_compatible.rs  types.rs
src/safety/: mod.rs
src/session/: mod.rs  store.rs  types.rs
src/theme/: colors.rs  markdown.rs  mod.rs  tool_render.rs
src/tool/: bash.rs  diff.rs  edit.rs  fs.rs  mod.rs  question.rs  registry.rs  schema.rs  skill.rs  task.rs  todo.rs  web.rs
src/tui/: agent_manager.rs  app.rs  mod.rs  theme.rs
src/ui_compat/: mod.rs
tests/: agent_loop_tests.rs  config_loader_tests.rs  permission_tests.rs  provider_tests.rs  render_tests.rs  session_tests.rs  tool_tests.rs  widgets_adapter_boundary_tests.rs
tools/: bash.go  bash_test.go  edit.go  edit_plan.go  edit_plan_test.go  edit_test.go  glob.go  glob_test.go  grep.go  grep_test.go  list.go  list_test.go  params.go  question.go  question_test.go  read.go  read_test.go  registry.go  skill.go  skill_test.go  task.go  task_test.go  todo_write.go  todo_write_test.go  web_fetch.go  web_fetch_test.go  web_search.go  web_search_test.go  write.go  write_test.go
tui/: PLAN.md  agents.go  agents_test.go  app.go  app_cancel_test.go  app_input_test.go  app_invariants_test.go  app_item_cache_test.go  app_layout.go  app_layout_test.go  app_list_render_test.go  app_markdown_cache.go  app_markdown_test.go  app_mouse.go  app_persistence_test.go  app_scroll.go  app_setup.go  app_shell.go  app_shell_test.go  app_state.go  app_stream.go  app_update_branches.go  app_update_branches_test.go  app_update_dialog.go  app_update_helpers.go  app_update_input.go  app_update_key_branches_test.go  app_update_run.go  app_update_run_test.go  app_update_scroll.go  app_update_stream.go  app_util.go  app_view.go  app_widgets.go  app_widgets_test.go  diff_dialog.go  diff_dialog_input.go  diff_dialog_test.go  diff_render.go  diff_render_test.go  (+31 more)
tui/agents/: build.md  explorer.md  loader.go  loader_test.go  plan.md  reviewer.md
tui/commands/: slash_commands.go
tui/components/: status_line.go  tool_line.go
tui/session/: DESIGN.md  state.go  storage.go  storage_shell_test.go  storage_test.go
(+82 files in other folders)
