[package]
name = "hh-cli"
version = "0.1.2"
edition = "2024"
description = "A terminal-based coding agent runtime"
license = "MIT"
repository = "https://github.com/liznear/hh"

[[bin]]
name = "hh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.7"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync"] }
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
scraper = "0.22"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
syntect-tui = "3.0"
urlencoding = "2.1"
base64 = "0.22"
arboard = { version = "3.6", features = ["wayland-data-control"] }
png = "0.18"

[dev-dependencies]
tempfile = "3.15"
criterion = "0.5"

[[bench]]
name = "tui_baseline"
harness = false
