[workspace]
resolver = "2"
members = ["hh-agent", "hh-coding-agent"]

[package]
name = "hh-cli"
version = "0.1.3"
edition = "2024"
description = "A terminal-based coding agent runtime"
license = "MIT"
repository = "https://github.com/liznear/hh"

[[bin]]
name = "hh"
path = "src/main.rs"

[dependencies]
hh-agent = { path = "hh-agent" }
hh-coding-agent = { path = "hh-coding-agent" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rig-core = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.7"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync"] }
crossterm = "0.28"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
urlencoding = "2.1"
base64 = "0.22"
arboard = { version = "3.6", features = ["wayland-data-control"] }
png = "0.18"
iocraft = "0.7"
smol = "2.0"
bitflags = "2.4"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.15"

[[bench]]
name = "tui_perf_probe"
harness = false
