[package]
name = "hh-agent"
version = "0.1.0"
edition = "2024"
description = "Minimal agent loop for LLM-based coding agents"
license = "MIT"
repository = "https://github.com/liznear/hh"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3.15"
