[package]
name = "hh-coding-agent"
version = "0.1.0"
edition = "2024"
description = "Core coding agent functionality for LLM-based coding assistants"
license = "MIT"
repository = "https://github.com/liznear/hh"

[dependencies]
hh-agent = { path = "../hh-agent" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["macros", "rt", "sync", "time", "process", "io-util"] }
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
base64 = "0.22"
urlencoding = "2.1"
dirs = "6.0"
similar = "2.7"

[dev-dependencies]
tempfile = "3.15"
