[package]
name = "hh-widgets"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reusable terminal UI widgets for ratatui applications"

[lib]
name = "hh_widgets"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
syntect-tui = "3.0"

[[bench]]
name = "scrollable_perf_probe"
harness = false

[[bench]]
name = "codediff_perf_probe"
harness = false
